NAS-138155: fix: text wrapping with many roles
* text was overflowing to be non-visible. resolved by letting it wrap.

--- a/src/app/pages/credentials/users/all-users/user-list/user-access-cell/user-access-cell.component.scss
+++ b/src/app/pages/credentials/users/all-users/user-list/user-access-cell/user-access-cell.component.scss
@@ -1,3 +1,5 @@
+@import 'scss-imports/variables';
+
 :host {
   align-items: center;
   display: flex;
@@ -6,5 +8,22 @@
 
   ix-icon {
     margin: 4px 0;
+  }
+
+  .user-roles {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    /* wrap the text to prevent *it* spilling over like the icons */
+    span {
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+
+    /* show the access text below the icon when the screen is tablet-sized or smaller */
+    @media(max-width: $breakpoint-tablet) {
+      flex-direction: column;
+    }
   }
 }
